# meteostation

./: .gitignore  CMakeLists.txt  LICENSE  sdkconfig  sdkconfig.old
components/ap_sta_api/: CMakeLists.txt  ap_sta_api.c
components/ap_sta_api/include/: ap_sta_api.h
components/button_api/: CMakeLists.txt  button_api.c
components/button_api/include/: button_api.h
components/buttons_api/: CMakeLists.txt  buttons_api.c
components/buttons_api/include/: buttons_api.h
components/lcd_api/: CMakeLists.txt  lcd_api.c
components/lcd_api/include/: lcd_api.h
components/lvgl_api/: CMakeLists.txt  lvgl_api.c
components/lvgl_api/include/: lvgl_api.h
components/scd41_api/: CMakeLists.txt  scd41_api.c
components/scd41_api/include/: scd41_api.h
components/time_api/: CMakeLists.txt  time_api.c
components/time_api/include/: time_api.h
components/weather_api/: CMakeLists.txt  weather_api.c
components/weather_api/include/: weather_api.h
components/wifi_connect/: wifi_connect.c
components/wifi_connect/include/: wifi_connect.h
fonts/: doto_reg_40.c  kode_mono_20.c  kode_mono_24.c  oswald_medium_20.c  oswald_medium_48.c  oswald_regular_20.c
main/: CMakeLists.txt  meteostation.c
models/: box_face.20260521-171940.FCBak  box_face.FCStd  lcd_screen.FCStd  meteo_box.FCStd  meteo_box_cover.FCStd
